--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -6,5 +6,10 @@
     "setup_machine_loading_title": "Configurando sua máquina...",
     "setup_machine_success_title": "Braço configurado!",
     "setup_machine_error_title": "Algo deu errado",
-    "setup_machine_error_description": "Não foi possível configurar sua máquina.\nTente novamente. Caso o erro persista,\ncontate nossa equipe."
+    "setup_machine_error_description": "Não foi possível configurar sua máquina.\nTente novamente. Caso o erro persista,\ncontate nossa equipe.",
+
+    "settings_title": "Configurações",
+    "settings_name_option_title": "Nome",
+    "settings_phone_option_title": "Telefone",
+    "settings_address_option_title": "Endereço"
 }
