--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -2,6 +2,7 @@
     "continue_button_label": "Continuar",
     "try_again": "Tentar novamente",
     "help": "Ajuda",
+    "save": "Salvar",
 
     "setup_machine_loading_title": "Configurando sua máquina...",
     "setup_machine_success_title": "Braço configurado!",
@@ -11,5 +12,7 @@
     "settings_title": "Configurações",
     "settings_name_option_title": "Nome",
     "settings_phone_option_title": "Telefone",
-    "settings_address_option_title": "Endereço"
+    "settings_address_option_title": "Endereço",
+    "name_page_title": "Nome da Loja",
+    "name_page_description": "Modifique o nome da loja que seus clientes irão enxergar durante as compras.\nSeu nome deve seguir algumas <bold>regras:\n• Não pode começar com números\n• Deve ter ao máximo 25 caracteres</bold>"
 }
