adicionar fluxo de onboarding

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,7 @@
 {
     "continue_button_label": "Continue",
+    "start_button_label": "Get Started",
+    "finish_on_boarding_button_label": "Finish Signup",
     "try_again": "Try again",
     "help": "Help",
     "save": "Save",
@@ -32,5 +34,46 @@
     "phone_page_error_page_title": "Something went wrong",
     "phone_page_error_page_description": "It wasn't possible to update your phone number.\nTry again, if the error persists, contact our team.",
     "phone_page_success_title": "Phone number updated!",
-    "phone_page_loading_title": "Updating your phone number..."
+    "phone_page_loading_title": "Updating your phone number...",
+
+    "on_boarding_token_page_title": "Machine Code",
+    "on_boarding_token_page_description": "Enter the token provided by the development team to connect with the machine.",
+    "on_boarding_token_page_error_bottomsheet_title": "Invalid Code! Please try again",
+    "on_boarding_token_page_error_bottomsheet_description": "If the problem persists, contact the development team.",
+    "on_boarding_token_page_error_page_title": "Unexpected Error! Contact the development team to provide a new Code",
+    "on_boarding_token_page_error_page_description": "Code cannot be null.",
+    "on_boarding_token_page_success_title": "Machine Code successfully linked!",
+    "on_boarding_token_page_loading_title": "Linking machine code...",
+
+    "on_boarding_email_page_title": "Email:",
+    "on_boarding_email_page_description": "Enter your email to proceed with onboarding.",
+    "on_boarding_email_page_error_bottomsheet_title": "Invalid Email! Please try again.",
+    "on_boarding_email_page_error_bottomsheet_description": "If the problem persists, please check your email and try again.",
+    "on_boarding_email_page_error_page_title": "Unexpected Error! Please try again later or contact support for assistance.",
+    "on_boarding_email_page_error_page_description": "Email cannot be empty.",
+    "on_boarding_email_page_success_title": "Email Successfully Added!",
+    "on_boarding_email_page_loading_title": "Adding email...",
+
+    "on_boarding_phone_page_title": "Phone Number:",
+    "on_boarding_phone_page_description": "Enter your phone number to proceed with onboarding.",
+    "on_boarding_phone_page_error_bottomsheet_title": "Invalid Phone Number! Please try again.",
+    "on_boarding_phone_page_error_bottomsheet_description": "If the problem persists, please check your phone number and try again.",
+    "on_boarding_phone_page_error_page_title": "Unexpected Error! Please try again later or contact support for assistance.",
+    "on_boarding_phone_page_error_page_description": "Phone number cannot be empty.",
+    "on_boarding_phone_page_success_title": "Phone Number Successfully Added!",
+    "on_boarding_phone_page_loading_title": "Adding phone number...",
+
+    "on_boarding_password_page_title": "Password:",
+    "on_boarding_password_confirm_page_title": "Confirm Password:",
+    "on_boarding_password_page_description": "Enter a password for your account with at least 8 characters.",
+    "on_boarding_password_page_error_bottomsheet_title": "Invalid Password! Please try again.",
+    "on_boarding_password_page_error_bottomsheet_description": "If the problem persists, please check your password and try again.",
+    "on_boarding_password_page_error_page_title": "Unexpected Error! Please try again later or contact support for assistance.",
+    "on_boarding_password_page_error_page_description": "Password cannot be empty.",
+    "on_boarding_password_page_success_title": "Password Successfully Set!",
+    "on_boarding_password_page_loading_title": "Setting password...",
+
+    "on_boarding_initial_title": "Welcome to Grabber",
+    "on_boarding_description_title": "For your first interaction with our product, we need you to complete the initial setup to link it with the Garra system.\n\nOn behalf of the Grabber team, we thank you for choosing us."
+
 }
