--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,5 +38,16 @@
     "phone_page_error_page_title": "Something went wrong",
     "phone_page_error_page_description": "It wasn't possible to update your phone number.\nTry again, if the error persists, contact our team.",
     "phone_page_success_title": "Phone number updated!",
-    "phone_page_loading_title": "Updating your phone number..."
+    "phone_page_loading_title": "Updating your phone number...",
+
+    "home_page_welcome_again_title": "Welcome {name}",
+    "home_page_manage_inventory_button_label": "Manage inventory",
+
+    "inventory_page_title": "Inventory",
+    "inventory_page_no_item_registered_description": "It seems like you haven'y registered any item yet. Register now and start managing your business the best way possible!",
+    "inventory_page_no_item_registered_button_labek": "Add item",
+    "inventory_amount_card_information": "Amount available: {amount}",
+    "inventory_error_page_title": "Something went wrong",
+    "inventory_error_page_description": "We couldn't load your store itens.\nPlease try again or contact the suport team.",
+    "inventory_page_loading": "Loading your inventory..."
 }
