--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -38,5 +38,16 @@
     "phone_page_error_page_title": "Algo deu errado",
     "phone_page_error_page_description": "Não foi possível atualizar seu número de telefone.\nTente novamente, caso o erro persista, contate nossa equipe.",
     "phone_page_success_title": "Número de telefone atualizado!",
-    "phone_page_loading_title": "Atualizando o número do seu telefone..."
+    "phone_page_loading_title": "Atualizando o número do seu telefone...",
+
+    "home_page_welcome_again_title": "Bem-vindo {name}",
+    "home_page_manage_inventory_button_label": "Gerenciar estoque",
+
+    "inventory_page_title": "Estoque",
+    "inventory_page_no_item_registered_description": "Parece que você ainda não cadastrou nenhum item. Cadastre um item e comece a gerenciar seu negócio da melhor forma possível!",
+    "inventory_page_no_item_registered_button_labek": "Adicionar item",
+    "inventory_amount_card_information": "Quantidade disponível: {amount}",
+    "inventory_error_page_title": "Algo deu errado",
+    "inventory_error_page_description": "Nós não conseguimos carregar o seu inventário.\nPor favor, tente novamente ou contate o suporte.",
+    "inventory_page_loading": "Carregando seu estoque..."
 }
