--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -30,7 +30,7 @@
     "name_error_page_secondary_button_label": "Trocar nome",
     "name_loading_page_title": "Atualizando o nome da sua loja...",
     "name_success_page_title": "Nome da loja atulizado!",
-
+    
     "phone_page_title": "Telefone",
     "phone_page_description": "Modifique o número de telefone/celular da sua sua loja para manter seus clientes informados durante as compras.",
     "phone_page_error_bottomsheet_title": "Número invalido",
@@ -39,4 +39,6 @@
     "phone_page_error_page_description": "Não foi possível atualizar seu número de telefone.\nTente novamente, caso o erro persista, contate nossa equipe.",
     "phone_page_success_title": "Número de telefone atualizado!",
     "phone_page_loading_title": "Atualizando o número do seu telefone..."
+
+    "supported_page_loading_tiltle": "Aguarde um momento enquanto conectamos você ao nosso suporte..."
 }
