add validation to onboarding

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -48,7 +48,7 @@
     "on_boarding_email_page_title": "Email:",
     "on_boarding_email_page_description": "Enter your email to proceed with onboarding.",
     "on_boarding_email_page_error_bottomsheet_title": "Invalid Email! Please try again.",
-    "on_boarding_email_page_error_bottomsheet_description": "If the problem persists, please check your email and try again.",
+    "on_boarding_email_page_error_bottomsheet_description": "Email is already registered or has an incorrect format!",
     "on_boarding_email_page_error_page_title": "Unexpected Error! Please try again later or contact support for assistance.",
     "on_boarding_email_page_error_page_description": "Email cannot be empty.",
     "on_boarding_email_page_success_title": "Email Successfully Added!",
@@ -67,7 +67,7 @@
     "on_boarding_password_confirm_page_title": "Confirm Password:",
     "on_boarding_password_page_description": "Enter a password for your account with at least 8 characters.",
     "on_boarding_password_page_error_bottomsheet_title": "Invalid Password! Please try again.",
-    "on_boarding_password_page_error_bottomsheet_description": "If the problem persists, please check your password and try again.",
+    "on_boarding_password_page_error_bottomsheet_description": "Passwords are not the same or have fewer than 8 characters.",
     "on_boarding_password_page_error_page_title": "Unexpected Error! Please try again later or contact support for assistance.",
     "on_boarding_password_page_error_page_description": "Password cannot be empty.",
     "on_boarding_password_page_success_title": "Password Successfully Set!",
