--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -48,7 +48,7 @@
     "on_boarding_email_page_title": "Email:",
     "on_boarding_email_page_description": "Insira o seu email para prosseguir com o onboarding.",
     "on_boarding_email_page_error_bottomsheet_title": "Email inválido! Por favor, tente novamente.",
-    "on_boarding_email_page_error_bottomsheet_description": "Se o problema persistir, verifique o seu email e tente novamente.",
+    "on_boarding_email_page_error_bottomsheet_description": "Email já cadastrado anteriormente ou com formatação incorreta!",
     "on_boarding_email_page_error_page_title": "Erro inesperado! Por favor, tente novamente mais tarde ou entre em contato com o suporte para obter ajuda.",
     "on_boarding_email_page_error_page_description": "O email não pode estar vazio.",
     "on_boarding_email_page_success_title": "Email adicionado com sucesso!",
@@ -67,7 +67,7 @@
     "on_boarding_password_confirm_page_title": "Confirmar Senha:",
     "on_boarding_password_page_description": "Digite uma senha para sua conta com pelo menos 8 caracteres.",
     "on_boarding_password_page_error_bottomsheet_title": "Senha inválida! Por favor, tente novamente.",
-    "on_boarding_password_page_error_bottomsheet_description": "Se o problema persistir, verifique sua senha e tente novamente.",
+    "on_boarding_password_page_error_bottomsheet_description": "Senha não estão iguais ou possuem menos que 8 caracteres",
     "on_boarding_password_page_error_page_title": "Erro inesperado! Por favor, tente novamente mais tarde ou entre em contato com o suporte para obter ajuda.",
     "on_boarding_password_page_error_page_description": "A senha não pode estar vazia.",
     "on_boarding_password_page_success_title": "Senha definida com sucesso!",
