--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -74,5 +74,8 @@
     "on_boarding_password_page_loading_title": "Definindo senha...",
 
     "on_boarding_initial_title": "Bem vindo ao Grabber",
-    "on_boarding_description_title": "Para seu primeiro contato com nosso produto precisamos que você faça as configurações iniciais para vincular com o sistema da Garra.\n\nEm nome da equipe do Grabber agradecemos pela preferência."
+    "on_boarding_description_title": "Para seu primeiro contato com nosso produto precisamos que você faça as configurações iniciais para vincular com o sistema da Garra.\n\nEm nome da equipe do Grabber agradecemos pela preferência.",
+
+    "default_invalid_token_label": "Token invalido",
+    "empty_string": ""
 }
