--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -46,6 +46,12 @@
     "home_page_welcome_again_title": "Bem-vindo {name}",
     "home_page_manage_inventory_button_label": "Gerenciar estoque",
 
+    "help_title" : "Central de Ajuda",
+    "help_page_help_message":"Como podemos ajudar?",
+    "help_page_buttom_label": "Iniciar chat em Tempo Real!",
+    "help_page_send_email": "Envia um email para:",
+    "help_email_contact": "MedGrabber@gmail.com",
+    
     "inventory_page_title": "Estoque",
     "inventory_page_no_item_registered_description": "Parece que você ainda não cadastrou nenhum item. Cadastre um item e comece a gerenciar seu negócio da melhor forma possível!",
     "inventory_page_no_item_registered_button_labek": "Adicionar item",
