--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,7 +20,7 @@
     "settings_title": "Settings",
     "settings_name_option_title": "Name",
     "settings_phone_option_title": "Phone",
-    "settings_address_option_title": "Address",
+    "settings_email_option_title": "Email",
 
     "name_page_title": "Store's Name",
     "name_page_description": "Modify your store's name so that clients can see the updated name.\nYour name must follow these <bold>rules:\n• Cannot start with numbers\n• Must be at max 25 characters long</bold>",
@@ -41,6 +41,16 @@
     "phone_page_error_page_description": "It wasn't possible to update your phone number.\nTry again, if the error persists, contact our team.",
     "phone_page_success_title": "Phone number updated!",
     "phone_page_loading_title": "Updating your phone number...",
+
+    "mail_page_title": "Email address",
+    "mail_page_description": "Modify the email to keep clients informed during their purchases.",
+    "mail_page_field_error": "Invalid email address",
+    "mail_error_page_title": "Something went wrong",
+    "mail_error_page_description": "It wasn't possible to update your email.\nTry again, if the error persists, contact our team.",
+    "mail_error_page_primary_button_label": "Try again",
+    "mail_error_page_secondary_button_label": "Change email",
+    "mail_loading_page_title": "Updating mail...",
+    "mail_success_page_title": "Email updated!",
 
     "home_page_welcome_again_title": "Welcome {name}",
     "home_page_manage_inventory_button_label": "Manage inventory",
