--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -2,7 +2,14 @@
     "continue_button_label": "Continuar",
     "start_button_label": "Iniciar",
     "login_button_label": "Login",
+    "forgotten_password_button_label": "Resetar senha",
     "login_error_message": "Email ou senha inválidos",
+    "forgotten_password_message": "Esqueceu sua senha?",
+    "forgotten_password_title": "Esqueceu sua senha",
+    "forgotten_password_email_sended_title": "Email enviado com sucesso!",
+    "forgotten_password_email_sended_title": "Por favor verifique sua caixa de mensagem para alteração da senha",
+    "forgotten_password_desc": "Insira seu email e enviaremos código para resetar sua senha.",
+    "forgotten_password_email_not_found": "Email não encontrado!",
     "go_to_login_page_button_label": "Já tenho uma conta",
     "register_user_button_label": "Registrar usuário",
     "try_again": "Tentar novamente",
