--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -112,5 +112,14 @@
     "order_page_title": "Pedido #{id}",
     "order_product_card_single_product_value": "Preço do produto - R$ {price}",
     "order_product_card_total_value": "Valor total - R$ {value}",
-    "order_product_amount_bought": "Quantidade comprada - {amount}"
+    "order_product_amount_bought": "Quantidade comprada - {amount}",
+
+    "home_order_section_title": "Pedidos",
+    "home_order_section_error_description": "Algo deu errado. Não conseguimos carregar os pedidos em andamento, tente novament ou entre em contato com a equipe de suporte.",
+    "home_order_section_error_button_label": "Tentar novamente",
+    "home_order_section_loaded_button_label": "Histórico de pedidos",
+    "home_order_section_loaded_orders_in_progress_title": "Pedidos em andamento",
+    "home_order_section_loaded_orders_finished_title": "Pedidos finalizados",
+    "home_order_simulate_order_button_label": "Simule um pedido"
+
 }
