--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -121,5 +121,10 @@
     "home_order_section_loaded_orders_finished_title": "Finished orders",
     "home_order_simulate_order_button_label": "Simulate a order",
 
-    "home_low_storage_items_section_title": "Low storage items"
+    "home_low_storage_items_section_title": "Low storage items",
+
+
+    "dashboard_title": "Dashboard",
+    "dashboard_section_reports_button_label": "Reports"
+
 }
