--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -122,5 +122,9 @@
     "home_order_section_loaded_orders_finished_title": "Pedidos finalizados",
     "home_order_simulate_order_button_label": "Simule um pedido",
 
-    "home_low_storage_items_section_title": "Itens com baixo estoque"
+    "home_low_storage_items_section_title": "Itens com baixo estoque",
+
+    "dashboard_title": "Dashboard",
+    "dashboard_section_reports_button_label": "Relatórios"
+
 }
